// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBuilding golden > cottage seed 12345 is stable 1`] = `
{
  "dims": [
    45,
    35,
  ],
  "floors": [
    {
      "doors": 4,
      "level": -1,
      "rooms": [
        "cellar",
        "cellar",
        "storage",
        "storage",
      ],
      "walls": 44,
      "windows": 0,
    },
    {
      "doors": 4,
      "level": 0,
      "rooms": [
        "bedroom",
        "corridor",
        "hall",
        "kitchen",
      ],
      "walls": 45,
      "windows": 5,
    },
    {
      "doors": 3,
      "level": 1,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
      ],
      "walls": 45,
      "windows": 9,
    },
  ],
  "stairs": 2,
}
`;

exports[`generateBuilding golden > manor seed 12345 is stable 1`] = `
{
  "dims": [
    75,
    75,
  ],
  "floors": [
    {
      "doors": 11,
      "level": -1,
      "rooms": [
        "cellar",
        "cellar",
        "cellar",
        "cellar",
        "cellar",
        "storage",
        "storage",
        "storage",
        "storage",
        "storage",
      ],
      "walls": 114,
      "windows": 0,
    },
    {
      "doors": 10,
      "level": 0,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "great-hall",
        "kitchen",
        "solar",
        "study",
      ],
      "walls": 103,
      "windows": 16,
    },
    {
      "doors": 9,
      "level": 1,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
        "guest-room",
      ],
      "walls": 109,
      "windows": 16,
    },
    {
      "doors": 9,
      "level": 2,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
        "guest-room",
        "guest-room",
      ],
      "walls": 112,
      "windows": 16,
    },
  ],
  "stairs": 3,
}
`;

exports[`generateBuilding golden > shop seed 12345 is stable 1`] = `
{
  "dims": [
    50,
    40,
  ],
  "floors": [
    {
      "doors": 4,
      "level": -1,
      "rooms": [
        "cellar",
        "cellar",
        "storage",
        "storage",
      ],
      "walls": 50,
      "windows": 0,
    },
    {
      "doors": 6,
      "level": 0,
      "rooms": [
        "bedroom",
        "bedroom",
        "corridor",
        "shopfront",
        "storage",
        "workshop",
      ],
      "walls": 55,
      "windows": 9,
    },
    {
      "doors": 5,
      "level": 1,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
        "guest-room",
      ],
      "walls": 57,
      "windows": 9,
    },
  ],
  "stairs": 2,
}
`;

exports[`generateBuilding golden > tavern seed 12345 is stable 1`] = `
{
  "dims": [
    65,
    55,
  ],
  "floors": [
    {
      "doors": 6,
      "level": -1,
      "rooms": [
        "cellar",
        "cellar",
        "cellar",
        "cellar",
        "storage",
        "storage",
        "storage",
      ],
      "walls": 84,
      "windows": 0,
    },
    {
      "doors": 8,
      "level": 0,
      "rooms": [
        "cellar",
        "common-room",
        "guest-room",
        "guest-room",
        "guest-room",
        "hall",
        "kitchen",
      ],
      "walls": 76,
      "windows": 13,
    },
    {
      "doors": 6,
      "level": 1,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
      ],
      "walls": 83,
      "windows": 13,
    },
  ],
  "stairs": 2,
}
`;

exports[`generateBuilding golden > workshop seed 12345 is stable 1`] = `
{
  "dims": [
    55,
    45,
  ],
  "floors": [
    {
      "doors": 5,
      "level": -1,
      "rooms": [
        "cellar",
        "cellar",
        "cellar",
        "storage",
        "storage",
        "storage",
      ],
      "walls": 66,
      "windows": 0,
    },
    {
      "doors": 6,
      "level": 0,
      "rooms": [
        "corridor",
        "private-room",
        "storage",
        "workshop",
        "workshop",
        "workshop",
      ],
      "walls": 61,
      "windows": 10,
    },
    {
      "doors": 5,
      "level": 1,
      "rooms": [
        "bedroom",
        "bedroom",
        "bedroom",
        "bedroom",
        "guest-room",
        "guest-room",
      ],
      "walls": 65,
      "windows": 9,
    },
  ],
  "stairs": 2,
}
`;
